# CS182_Project

./: .gitignore  README.md  backup_1.py  backup_1_correct_training.py  backup_2.py  backup_2_no_fake_quinine.py  environment.yml  main.py  pyproject.toml  requirements.txt  smoke_test.py  smoke_test_data_gen.py  teststuff.sh  toy_experiment.py
docs/: README.md
models/linear_regression_sweep_1/58f895d7-199a-47ad-a99d-3452cd6b3faa/: config.yaml
src/: Figure_1.ipynb  dual_eval.ipynb  dual_eval_2.ipynb  dual_eval_2.py  eval.ipynb  eval.py  models.py  results.ipynb  run_dual_eval.py  run_sweep.sh  run_sweep_curriculum.sh  schema.py  task_labeling.py  tasks.py  train.py
src/conf/: README.md  toy-quadratic.yaml  training_dual_task.yaml  wandb.yaml
src/conf/base_sweep/: base1.yaml  (+4 more)
src/results/: dual_mixed_linear_query_mean.csv  dual_mixed_linear_query_sem.csv  dual_mixed_mean.csv  dual_mixed_quadratic_query_mean.csv  dual_mixed_quadratic_query_sem.csv  dual_mixed_sem.csv  dual_random_linear_query_mean.csv  dual_random_linear_query_sem.csv  dual_random_mean.csv  dual_random_quadratic_query_mean.csv  dual_random_quadratic_query_sem.csv  dual_random_sem.csv  dual_sequential_linear_query_mean.csv  dual_sequential_linear_query_sem.csv  dual_sequential_mean.csv  dual_sequential_quadratic_query_mean.csv  dual_sequential_quadratic_query_sem.csv  dual_sequential_sem.csv  linear_last_dual_mixed_mean.csv  linear_last_dual_mixed_sem.csv  linear_last_dual_random_mean.csv  linear_last_dual_random_sem.csv  linear_last_dual_sequential_mean.csv  linear_last_dual_sequential_sem.csv
(+30 files in other folders)
