[project]
name = "cs182-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eval>=0.0.5",
    "jupyter==1.0.0",
    "matplotlib>=3.8.0",
    "munch>=4.0.0",
    "numpy==1.22.3",
    "pandas==1.4.2",
    "protobuf==3.20.1",
    "scikit-learn==1.0.2",
    "seaborn==0.11.2",
    "torch",
    "tqdm==4.64.0",
    "transformers==4.17.0",
    "wandb==0.12.11",
    "xgboost==1.6.1",
]
