[project]
name = "cs182-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython<3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "quinine>=0.3.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
    "xgboost>=3.1.1",
]

[tool.uv.extra-build-dependencies]
pyyaml = ["cython<3"]
cytoolz = ["cython<3"]
